<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.neverpile.eureka</groupId>
  <artifactId>neverpile-eureka</artifactId>
  <packaging>pom</packaging>
  <version>0.1.0</version>

  <properties>
    <java.version>17</java.version>

    <maven.compiler.source>${java.version}</maven.compiler.source>
    <maven.compiler.target>${java.version}</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <spring-boot.version>2.7.8</spring-boot.version>
    <spring-security-oauth2.version>2.6.8</spring-security-oauth2.version>

    <spring-boot-admin.version>2.7.10</spring-boot-admin.version>
    <springfox.version>3.0.0</springfox.version>
    <swagger.version>2.2.8</swagger.version>

    <feign.version>8.18.0</feign.version>
    <jetty.version>9.4.48.v20220622</jetty.version>

    <jmockit.version>1.49</jmockit.version>

    <elasticsearch.version>7.17.8</elasticsearch.version>

    <ignite.version>2.14.0</ignite.version>
    <ignite-cloud.version>2.13.0</ignite-cloud.version>
    <ignite-aws.version>2.11.1</ignite-aws.version>

    <lucene.version>8.11.1</lucene.version>

    <guava.version>31.1-jre</guava.version>

    <cassandra-driver-core.version>4.15.0</cassandra-driver-core.version>

    <url-crypto-kit.version>1.4.1</url-crypto-kit.version>
    <eureka-webjar.version>1.0.19</eureka-webjar.version>

    <opentracing.version>0.33.0</opentracing.version>

    <mockito-core.version>4.11.0</mockito-core.version>
    <metrics-core.version>4.2.15</metrics-core.version>
    <modelmapper.version>1.1.3</modelmapper.version>

    <aws-s3.version>1.12.397</aws-s3.version>
    <s3mock.version>2.11.0</s3mock.version>

    <!-- plugins -->
    <docker-maven-plugin.version>0.40.3</docker-maven-plugin.version>
    <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
    <maven-javadoc-plugin.version>3.1.1</maven-javadoc-plugin.version>
    <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
    <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
    <maven-jar-plugin.version>3.3.0</maven-jar-plugin.version>
    <dependency-check-maven.version>8.0.2</dependency-check-maven.version>

    <neverpile-commons.version>1.6.4</neverpile-commons.version>
  </properties>

  <repositories>
    <repository>
      <id>neverpile</id>
      <name>Neverpile Apache Maven Packages</name>
      <url>https://registry.neverpile.com/repository/maven-releases/</url>
    </repository>
  </repositories>

  <modules>
    <module>neverpile-eureka-core</module>
    <module>neverpile-eureka-objectstore-filesystem</module>
    <module>neverpile-eureka-objectstore-s3</module>
    <module>neverpile-eureka-objectstore-cassandra</module>
    <module>neverpile-eureka-security-oauth2</module>
    <module>neverpile-eureka-search-elastic</module>
    <module>neverpile-eureka-ignite</module>
    <module>neverpile-eureka-hazelcast</module>
    <module>neverpile-eureka-authorization</module>
    <module>neverpile-eureka-plugin-metadata</module>
    <module>neverpile-eureka-plugin-audit</module>
    <module>neverpile-eureka-bom</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <!-- Spring-Boot -->
      <dependency>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-dependencies</artifactId>
        <version>${spring-boot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- neverpile-commons -->
      <dependency>
        <groupId>com.neverpile.commons</groupId>
        <artifactId>neverpile-commons-authorization</artifactId>
        <version>${neverpile-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.commons</groupId>
        <artifactId>neverpile-commons-openapi</artifactId>
        <version>${neverpile-commons.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.commons</groupId>
        <artifactId>neverpile-commons-opentracing</artifactId>
        <version>${neverpile-commons.version}</version>
      </dependency>

      <!-- Swagger -->
      <dependency>
        <groupId>io.swagger.core.v3</groupId>
        <artifactId>swagger-annotations</artifactId>
        <version>${swagger.version}</version>
      </dependency>
      <dependency>
        <groupId>io.swagger.core.v3</groupId>
        <artifactId>swagger-models</artifactId>
        <version>${swagger.version}</version>
      </dependency>
      <dependency>
        <groupId>com.netflix.feign</groupId>
        <artifactId>feign-core</artifactId>
        <version>${feign.version}</version>
      </dependency>
      <dependency>
        <groupId>com.netflix.feign</groupId>
        <artifactId>feign-jackson</artifactId>
        <version>${feign.version}</version>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-servlet</artifactId>
        <version>${jetty.version}</version>
      </dependency>
      <dependency>
        <groupId>org.jmockit</groupId>
        <artifactId>jmockit</artifactId>
        <version>${jmockit.version}</version>
      </dependency>

      <!-- elasticsearch -->
      <dependency>
        <groupId>org.elasticsearch</groupId>
        <artifactId>elasticsearch</artifactId>
        <version>${elasticsearch.version}</version>
      </dependency>
      <dependency>
        <groupId>org.elasticsearch.client</groupId>
        <artifactId>elasticsearch-rest-high-level-client</artifactId>
        <version>${elasticsearch.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-core</artifactId>
        <version>${project.version}</version>
      </dependency>

      <!-- Need this due to http://apache-ignite-users.70518.x6.nabble.com/Ignite-Version-2-0-startup-H2-error-td12532.html -->
      <dependency>
        <groupId>com.h2database</groupId>
        <artifactId>h2</artifactId>
        <version>2.1.214</version>
      </dependency>

      <!-- other stuff -->
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>${guava.version}</version>
      </dependency>
      <dependency>
        <groupId>com.datastax.oss</groupId>
        <artifactId>java-driver-core</artifactId>
        <version>${cassandra-driver-core.version}</version>
      </dependency>
      <dependency>
        <groupId>org.mockito</groupId>
        <artifactId>mockito-core</artifactId>
        <version>${mockito-core.version}</version>
        <scope>test</scope>
      </dependency>
      <dependency>
        <groupId>io.dropwizard.metrics</groupId>
        <artifactId>metrics-core</artifactId>
        <version>${metrics-core.version}</version>
      </dependency>

      <!-- neverpile commons -->
      <dependency>
        <groupId>com.neverpile</groupId>
        <artifactId>url-crypto-kit</artifactId>
        <version>${url-crypto-kit.version}</version>
      </dependency>

      <!-- internal dependencies -->
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-ignite</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-objectstore-filesystem</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-objectstore-cassandra</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-objectstore-s3</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-security-oauth2</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-search-elastic</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>${project.groupId}</groupId>
        <artifactId>neverpile-eureka-authorization</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>io.springfox</groupId>
        <artifactId>springfox-boot-starter</artifactId>
        <version>${springfox.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-authorization</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>org.modelmapper</groupId>
        <artifactId>modelmapper</artifactId>
        <version>${modelmapper.version}</version>
      </dependency>
      <dependency>
        <groupId>de.codecentric</groupId>
        <artifactId>spring-boot-admin-starter-client</artifactId>
        <version>${spring-boot-admin.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-hazelcast</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-plugin-metadata</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka.client</groupId>
        <artifactId>neverpile-eureka-client-webjar</artifactId>
        <version>${eureka-webjar.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-plugin-audit</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.neverpile.eureka</groupId>
        <artifactId>neverpile-eureka-test-support</artifactId>
        <version>${project.version}</version>
      </dependency>

      <dependency>
        <groupId>io.opentracing</groupId>
        <artifactId>opentracing-api</artifactId>
        <version>${opentracing.version}</version>
      </dependency>
      <dependency>
        <groupId>io.opentracing</groupId>
        <artifactId>opentracing-noop</artifactId>
        <version>${opentracing.version}</version>
      </dependency>
      <dependency>
        <groupId>io.rest-assured</groupId>
        <artifactId>rest-assured</artifactId>
        <version>4.5.1</version>
        <scope>test</scope>
        <exclusions>
          <exclusion>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-osgi</artifactId>
          </exclusion>
        </exclusions>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <optional>true</optional>
    </dependency>

    <!-- Provide JUnit 5 API -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- and the engine for surefire and failsafe -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.vintage</groupId>
      <artifactId>junit-vintage-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- Needed with eclipse 2019-09, see https://bugs.eclipse.org/bugs/show_bug.cgi?id=551298 -->
    <!-- and https://stackoverflow.com/questions/57040675/java-lang-noclassdeffounderror-org-junit-platform-commons-preconditionviolation -->
    <!-- FIXME: remove once everyone is on JUnit 5.5.2+ -->
    <dependency>
      <groupId>org.junit.platform</groupId>
      <artifactId>junit-platform-commons</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>${maven-compiler-plugin.version}</version>
          <configuration>
            <source>11</source>
            <target>11</target>
            <release>11</release>
            <forceJavacCompilerUse>true</forceJavacCompilerUse>
          </configuration>
        </plugin>
        <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring-boot.version}</version>
          <executions>
            <execution>
              <goals>
                <goal>repackage</goal>
              </goals>
            </execution>
          </executions>
        </plugin>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>${maven-jar-plugin.version}</version>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>${maven-surefire-plugin.version}</version>
        <configuration>
          <!--
            Fix for Ignite problem:
            "Ignite uses proprietary SDK APIs that are not available by default. You need to pass specific flags to JVM to make these APIs available." [1]
            [1]:https://ignite.apache.org/docs/2.14.0/quick-start/java#running-ignite-with-java-11-or-later
           -->
          <argLine>
            --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED
            --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
            --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
            --add-opens=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
            --add-opens=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
            --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
            --add-opens=java.base/java.io=ALL-UNNAMED
            --add-opens=java.base/java.nio=ALL-UNNAMED
            --add-opens=java.base/java.util=ALL-UNNAMED
            --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
            --add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED
            --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
            --add-opens=java.base/java.lang=ALL-UNNAMED
            --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
            --add-opens=java.base/java.math=ALL-UNNAMED
            --add-opens=java.base/java.time=ALL-UNNAMED
            --add-opens=java.sql/java.sql=ALL-UNNAMED
          </argLine>
          <excludes>
            <exclude>**/*IT.java</exclude>
          </excludes>
          <forkMode>once</forkMode>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-failsafe-plugin</artifactId>
        <version>${maven-failsafe-plugin.version}</version>
        <configuration>
          <skipITs>${skipIntegrationTests}</skipITs>
          <forkMode>once</forkMode>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>integration-test</goal>
              <goal>verify</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <version>${maven-javadoc-plugin.version}</version>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <goals>
              <goal>jar</goal>
            </goals>
            <configuration>
              <!-- <additionalparam>-Xdoclint:none</additionalparam> -->
              <!-- <failOnError>false</failOnError> -->
            </configuration>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>io.fabric8</groupId>
        <artifactId>docker-maven-plugin</artifactId>
        <version>${docker-maven-plugin.version}</version>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>3.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
      <plugin>
        <groupId>org.owasp</groupId>
        <artifactId>dependency-check-maven</artifactId>
        <version>${dependency-check-maven.version}</version>
        <configuration>
          <assemblyAnalyzerEnabled>true</assemblyAnalyzerEnabled>
          <failOnError>true</failOnError>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>skip-integration-tests</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <skipIntegrationTests>true</skipIntegrationTests>
      </properties>
    </profile>
    <profile>
      <id>run-integration-tests</id>
      <activation>
        <activeByDefault>false</activeByDefault>
      </activation>
      <properties>
        <skipIntegrationTests>false</skipIntegrationTests>
      </properties>
    </profile>
  </profiles>
</project>